apps/architecture-portal/versioned_docs/version-1.0.22.0/product/capability-map.mdx
---
title: 产品能力地图
area: product
status: partial
owners: [product, core]
source_paths:
  - products/lmdj/assembly.json
  - products/lmdj/assembly.lock.json
  - docs/prd/decision-log.md
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 创作能力

Project Truth、命令处理、项目存取、portable Bundle transfer 与确定性 Cook 已实现于 Headless Core；Creator Web 已提供 Project discovery/open、portable import、64-Pad Runtime surface，以及 Sample inspect/waveform、WAV import/replace、trim/gain/mute、四种触发模式、preview、reset 与 Cook retry。多素材浏览、采样录制、自动 slicing、非破坏音频处理和 Sequence 编排仍待后续 Stage。

## 演奏能力

Runtime Snapshot、样本准备、离线渲染、实时引擎、Voice 状态与 Sample preview 具有自动化覆盖。低延迟手感、MIDI/触控输入和设备生命周期需要独立物理验收。

## 智能能力

Capability Contract、Registry、Attempt Store 与本地成功/失败 Proof Provider 已实现。生产模型、云服务、鉴权、计费和数据政策尚未实现。

## Host 与交付能力

CLI `1.0.12`、MCP `1.1.9`、Native Test Host `1.0.10`、Creator Web Host `1.2.0` 与 Formal Web Runtime Host `1.2.9` 已装配；两个 Web Host 共用 Web Runtime Platform `0.3.0`。Web Runtime Lab 保持为独立实验工具，不属于 Product Assembly，也不替代正式 Host 或物理设备验收。Product Assembly 锁定确切组件身份，版本发布不由任意 Host 决定。

## 状态解释

“已实现”表示 active source 加当前测试；“部分实现”明确缺口；“已设计/规划中”不作为可用功能宣传。
